[package]
name = "gus"
version = "0.1.0"
edition = "2021"

description = "Switch git user easily"
license-file = "LICENSE"
authors = ["Naoya Takenaka <noy@abc-net.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rpassword = "7.2"
anyhow = "1.0"
glob = "0.3"
comfy-table = "7.1"
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
